make background_home.jpeg bigger

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -179,7 +179,7 @@ p {
 
 
 body.home-page::before {
-    background: url('../images/background_home.jpeg') left top / contain no-repeat;
+    background: url('../images/background_home.jpeg') center center / cover no-repeat;
 }
 
 body.professional-page::before {
