--- a/src/css/main.css
+++ b/src/css/main.css
@@ -324,7 +324,7 @@ body.projects-page::before {
 .project-detail-box p {
     font-size: 1rem;
     line-height: 1.6;
-    color: #555;
+    color: #13292A;
     margin: 0;
 }
 
